--- a/WorldOfRaces/WorldOfRaces.csproj
+++ b/WorldOfRaces/WorldOfRaces.csproj
@@ -42,6 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Characters\Character.cs" />
+    <Compile Include="Characters\classType\Mage.cs" />
+    <Compile Include="Characters\classType\Priest.cs" />
+    <Compile Include="Characters\classType\Rogue.cs" />
+    <Compile Include="Characters\classType\Warrior.cs" />
     <Compile Include="Characters\Elf.cs" />
     <Compile Include="Characters\Goblin.cs" />
     <Compile Include="Characters\Human.cs" />
@@ -56,9 +60,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Characters\classType\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
