--- a/WorldOfRaces/WorldOfRaces.csproj
+++ b/WorldOfRaces/WorldOfRaces.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Characters\Troll.cs" />
     <Compile Include="Characters\Undead.cs" />
     <Compile Include="Characters\Worgen.cs" />
+    <Compile Include="Engine.cs" />
     <Compile Include="Interfaces\IAttack.cs" />
     <Compile Include="Interfaces\IHeal.cs" />
     <Compile Include="Program.cs" />
