--- a/WorldOfRaces/WorldOfRaces.csproj
+++ b/WorldOfRaces/WorldOfRaces.csproj
@@ -61,12 +61,7 @@
     <Compile Include="Characters\classType\Priest.cs" />
     <Compile Include="Characters\classType\Rogue.cs" />
     <Compile Include="Characters\classType\Warrior.cs" />
-    <Compile Include="Characters\Elf.cs" />
-    <Compile Include="Characters\Goblin.cs" />
-    <Compile Include="Characters\Human.cs" />
-    <Compile Include="Characters\Troll.cs" />
-    <Compile Include="Characters\Undead.cs" />
-    <Compile Include="Characters\Worgen.cs" />
+    <Compile Include="Characters\EnumRaces.cs" />
     <Compile Include="Engine.cs" />
     <Compile Include="Interfaces\IAttack.cs" />
     <Compile Include="Interfaces\IHeal.cs" />
