--- a/WorldOfRaces/WorldOfRaces.csproj
+++ b/WorldOfRaces/WorldOfRaces.csproj
@@ -56,36 +56,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Characters\Character.cs" />
-    <Compile Include="Characters\classType\Mage.cs" />
-    <Compile Include="Characters\classType\Priest.cs" />
-    <Compile Include="Characters\classType\Rogue.cs" />
-    <Compile Include="Characters\classType\Warrior.cs" />
-    <Compile Include="Characters\EnumRaces.cs" />
-    <Compile Include="Engine.cs" />
     <Compile Include="Interfaces\IAttack.cs" />
-    <Compile Include="Interfaces\IHeal.cs" />
-    <Compile Include="Items\Armor\Chest.cs" />
-    <Compile Include="Items\Armor\Helm.cs" />
-    <Compile Include="Items\Armor\MainArmor.cs" />
-    <Compile Include="Items\Armor\Shield.cs" />
-    <Compile Include="Items\Item.cs" />
-    <Compile Include="Items\Potions\HealthPotion.cs" />
-    <Compile Include="Items\Potions\ManaPotion.cs" />
-    <Compile Include="Items\Potions\Potion.cs" />
-    <Compile Include="Items\Weapon\Daggers.cs" />
-    <Compile Include="Items\Weapon\MainWeapon.cs" />
-    <Compile Include="Items\Weapon\Staff.cs" />
-    <Compile Include="Items\Weapon\Sword.cs" />
+    <Compile Include="Interfaces\ICharacter.cs" />
+    <Compile Include="Interfaces\IDestroyable.cs" />
+    <Compile Include="Position.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Vendor\Salesman.cs" />
-    <Compile Include="Vendor\SalesmanStuff.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Characters\" />
+  </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
       <Visible>False</Visible>
