--- a/WorldOfRaces/WorldOfRaces.csproj
+++ b/WorldOfRaces/WorldOfRaces.csproj
@@ -59,10 +59,14 @@
     <Compile Include="Interfaces\IAttack.cs" />
     <Compile Include="Interfaces\ICharacter.cs" />
     <Compile Include="Interfaces\IDestroyable.cs" />
+    <Compile Include="Interfaces\IInputReader.cs" />
     <Compile Include="Interfaces\IMoving.cs" />
+    <Compile Include="Interfaces\IRenderer.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\ConsoleInputReader.cs" />
+    <Compile Include="UI\ConsoleRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
