Add Interfaces - ICollect and IHero

--- a/WorldOfRaces/WorldOfRaces.csproj
+++ b/WorldOfRaces/WorldOfRaces.csproj
@@ -63,8 +63,10 @@
     <Compile Include="GameObject.cs" />
     <Compile Include="Interfaces\IAttack.cs" />
     <Compile Include="Interfaces\ICharacter.cs" />
+    <Compile Include="Interfaces\ICollect.cs" />
     <Compile Include="Interfaces\IDestroyable.cs" />
     <Compile Include="Interfaces\IHealing.cs" />
+    <Compile Include="Interfaces\IHero.cs" />
     <Compile Include="Interfaces\IInputReader.cs" />
     <Compile Include="Interfaces\IMoving.cs" />
     <Compile Include="Interfaces\IRenderer.cs" />
