--- a/WorldOfRaces/WorldOfRaces.csproj
+++ b/WorldOfRaces/WorldOfRaces.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Characters\Character.cs" />
     <Compile Include="Characters\Dwarf.cs" />
     <Compile Include="Characters\Gnome.cs" />
+    <Compile Include="Characters\Goblin.cs" />
     <Compile Include="Characters\Hero.cs" />
     <Compile Include="Characters\HeroLand.cs" />
     <Compile Include="Characters\HeroRace.cs" />
