--- a/WorldOfRaces/WorldOfRaces.csproj
+++ b/WorldOfRaces/WorldOfRaces.csproj
@@ -66,6 +66,8 @@
     <Compile Include="Characters\HeroLand.cs" />
     <Compile Include="Characters\HeroRace.cs" />
     <Compile Include="Characters\NightElf.cs" />
+    <Compile Include="Characters\Orc.cs" />
+    <Compile Include="Characters\Tauren.cs" />
     <Compile Include="Exceptions\NotEnoughElexirsException.cs" />
     <Compile Include="Exceptions\ObjectOutsideOfMapException.cs" />
     <Compile Include="GameObject.cs" />
