--- a/WorldOfRaces/WorldOfRaces.csproj
+++ b/WorldOfRaces/WorldOfRaces.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Characters\NightElf.cs" />
     <Compile Include="Characters\Orc.cs" />
     <Compile Include="Characters\Tauren.cs" />
+    <Compile Include="Engine\GameEngine.cs" />
     <Compile Include="Exceptions\NotEnoughElexirsException.cs" />
     <Compile Include="Exceptions\ObjectOutsideOfMapException.cs" />
     <Compile Include="GameObject.cs" />
@@ -85,7 +86,7 @@
     <Compile Include="Items\Item.cs" />
     <Compile Include="Items\ItemState.cs" />
     <Compile Include="Position.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="RPGRun.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\ConsoleInputReader.cs" />
     <Compile Include="UI\ConsoleRenderer.cs" />
